--- a/src/css/lib/reset.css
+++ b/src/css/lib/reset.css
@@ -10,13 +10,14 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
-  margin:0;
-  padding:0;
-  border:0;
-  outline:0;
-  font-size:100%;
-  vertical-align:baseline;
-  background:transparent;
+	margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-size:100%;
+	vertical-align:baseline;
+	background:transparent;
+	font-weight: normal;
 }
 
 article, aside, details, figcaption, figure,
@@ -51,4 +52,7 @@ q:before, q:after {
 }
 blockquote, q {
 	quotes: "" "";
+}
+button {
+	font-family:inherit;
 }
